<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cnBeta资讯</string>
    <string name="action_settings">设置</string>
    <string name="action_web">查看原文</string>
    <string name="action_share">分享</string>
    <string name="action_font">字体大小</string>
    <string name="action_comment">评论</string>
    <string name="action_more">更多</string>
    
    
    <string name="preference_first">first</string>
    <string name="preference_wifi">wifi</string>
    <string name="preference_nopic">nopic</string>
    <string name="preference_clearcache">cache</string>
    <string name="preference_auto_clearcache">auto_cache</string>
    <string name="preference_font">font</string>
    <string name="preference_feedback">feedback</string>
    <string name="preference_about">about</string>
    
    <string name="TAG_SETTINGS">设置</string>
    <string name="TAG_NEWS">资讯分类</string>
    <string name="TYPE_ALL">全部资讯</string>
    <string name="TYPE_HOTCM">热门评论</string>
    <string name="TYPE_TOP10">十大人气</string>
    <string name="TYPE_SYSTEM">系统设置</string>
    
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
	    

     <string name="umeng_fb_contact_info_hint">QQ, 电话等我们能联系您的联系方式</string>
    <string name="umeng_fb_contact_update_at">更新于 </string>
    <string name="umeng_fb_back">返回</string>
    <string name="umeng_fb_title">用户反馈</string>
    <string name="umeng_fb_contact_title">填写联系信息</string>
    <string name="umeng_fb_contact_info">联系方式</string>
    <string name="umeng_fb_reply_content_hint">我想说</string>
    <string name="umeng_fb_send">发送</string>
    <string name="umeng_fb_reply_content_default">你好， 我是产品经理，欢迎您反馈使用产品的感受和建议</string>
    <string name="umeng_fb_reply_date_default">2013年3月12日 13:24:00</string>
    <string name="umeng_fb_notification_ticker_text">收到来自开发者的回复</string>
    
    <string name="umeng_fb_notification_content_formatter_single_msg">新回复: %s</string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">收到来自开发者的 %d 条回复。</string>
    
    <color name="umeng_fb_color_btn_pressed">#1495F7</color>
    <color name="umeng_fb_color_btn_normal">#333333</color>
    
    <string name="umeng_fb_powered_by">Powered by</string>
</resources>
