<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->


<!-- This is a primitive example showing the different types of preferences available. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="新闻浏览" >
<!--         <CheckBoxPreference -->
<!--             android:defaultValue="flase" -->
<!--             android:key="@string/preference_nopic" -->
<!--             android:title="无图模式" /> -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_wifi"
            android:title="2G/3G网络下不加载图片" 
            android:summary="在非Wifi下节省流量"/>

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="字体大小"
            android:entries="@array/entries_preference_font"
            android:entryValues="@array/entryvalues_preference_font"
            android:key="@string/preference_font"
            android:summary="中"
            android:title="字体大小" />
    </PreferenceCategory>
    <PreferenceCategory android:title="缓存设置" >
        <PreferenceScreen
            android:key="@string/preference_clearcache"
            android:summary="6.0M"
            android:title="清理缓存" />
        <CheckBoxPreference
            android:key="@string/preference_auto_clearcache"
            android:summary="当退出程序时,自动清除所有缓存"
            android:title="自动清除缓存" 
            android:defaultValue="false"/>
        
    </PreferenceCategory>
    <PreferenceCategory android:title="其他设置" >
        <PreferenceScreen
            android:key="@string/preference_feedback"
            android:title="意见反馈" 
            />
        <PreferenceScreen
            android:key="@string/preference_about"
            android:title="关于" 
            />
	
        </PreferenceCategory>
</PreferenceScreen>